minor changes from reviews

--- a/vignettes/Introduction_expressionAnalysis.Rmd
+++ b/vignettes/Introduction_expressionAnalysis.Rmd
@@ -54,7 +54,7 @@ ls("package:expressionAnalysis")
 
 To list all sample datasets available in the package:
 ```{r echo=T, results='hide', warning=FALSE, message=FALSE}
-ls("package:expressionAnalysis")
+data("package:expressionAnalysis")
 ```
 
 
