--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ correlation between genes, and produces a correlation plot to for visualization.
 The *rankDEG* function uses different methods, including t-test and Wilcoxon 
 rank sum test, to rank differentially expressed genes between case samples and 
 control samples. The *exprPlot* function produces boxplots to visualize differential gene 
-expression. The *keggDiseaseGenes* retrieves genes associated with a specific Kyoto Encyclopedia of Genes and Genomes (KEGG) disease entry. the *exprPCA* function produces a principal component analysis
+expression. The *keggDiseaseGenes* function retrieves genes associated with a specific Kyoto Encyclopedia of Genes and Genomes (KEGG) disease entry. The *exprPCA* function produces a principal component analysis
 plot of the expression data.
 
 The package also contains two datasets from a gene expression profiling 
